--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Curso de extensão gratuito para ingressantes ou recém ingressantes de curso superior.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://danilob.github.io/matematica-basica-curso/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
 theme: minima
